# AI-Log-Processor

./: .gitignore  pyproject.toml
src/: config.py  database.py  schema.py  shipper.py  watcher.py
tests/: test_database.py  test_schema.py  test_shipper.py  test_watcher.py
