[project]
name = "ai-log-processor"
version = "0.1.0"
description = "File-watching log pipeline with Pydantic validation, async shipping, and FastAPI dashboard"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "watchdog>=4.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
